Update .vscodeignore to include all source files and remove specific extensions; bump version to 2.1.1 in package.json

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -2,9 +2,18 @@ node_modules/
 out/extension_backup.*
 out/extension_new.*
 out/extention.*
-src/extension_backup.ts
-src/extension_new.ts
-src/extention.ts
+src/**
+!src/**/*.d.ts
+__pycache__/**
+*.pyc
+*.pyo
+*.map
+*.log
+test_example.py
+src/test/**
+**/*.test.*
+.eslintrc.js
+tsconfig.json
 *.vsix
 .DS_Store
 *.log
