--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,20 +1,24 @@
 node_modules/
-out/extension_backup.*
-out/extension_new.*
-out/extention.*
 src/**
 !src/**/*.d.ts
-__pycache__/**
-*.pyc
-*.pyo
-*.map
-*.log
-test_example.py
 src/test/**
 **/*.test.*
+*.map
+*.log
 .eslintrc.js
 tsconfig.json
 *.vsix
 .DS_Store
-*.log
 .vscode/.history
+__pycache__/**
+*.pyc
+*.pyo
+debug_*.js
+test_*.js
+simple_*.js
+hover_test.py
+minimal_test.py
+test_hover.py
+out/extension_backup.*
+out/extension_new.*
+out/extention.*
