--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "icon": "images/icon.png",
     "displayName": "Python Hover",
     "description": "Rich hover documentation for Python keywords (class, def, try, etc.) with live content from docs.python.org",
-    "version": "2.1.1",
+    "version": "2.1.2",
     "publisher": "KiidxAtlas",
     "license": "MIT",
     "repository": {
@@ -36,6 +36,16 @@
             {
                 "command": "pythonHover.clearCache",
                 "title": "Clear Documentation Cache",
+                "category": "Python Hover"
+            },
+            {
+                "command": "pythonHover.rebuildDocsIndex",
+                "title": "Rebuild Dynamic Docs Index",
+                "category": "Python Hover"
+            },
+            {
+                "command": "pythonHover.toggleDynamicIndexing",
+                "title": "Toggle Dynamic Indexing",
                 "category": "Python Hover"
             },
             {
@@ -74,14 +84,69 @@
                 "category": "Python Hover"
             },
             {
+                "command": "pythonHover.searchDocs",
+                "title": "Search Python Docs…",
+                "category": "Python Hover"
+            },
+            {
+                "command": "pythonHover.exportHoverToMarkdown",
+                "title": "Export Hover to Markdown…",
+                "category": "Python Hover"
+            },
+            {
+                "command": "pythonHover.copyPermalink",
+                "title": "Copy Docs Permalink",
+                "category": "Python Hover"
+            },
+            {
+                "command": "pythonHover.detectDocsVersionFromInterpreter",
+                "title": "Detect Docs Version from Interpreter",
+                "category": "Python Hover"
+            },
+            {
                 "command": "pythonHover.insertClassTemplate",
                 "title": "Insert Class Template",
+                "category": "Python Hover"
+            },
+            {
+                "command": "pythonHover.insertIfTemplate",
+                "title": "Insert If/Elif/Else Template",
+                "category": "Python Hover"
+            },
+            {
+                "command": "pythonHover.insertTryTemplate",
+                "title": "Insert Try/Except/Else/Finally Template",
+                "category": "Python Hover"
+            },
+            {
+                "command": "pythonHover.debugExtraction",
+                "title": "Debug Extraction (show raw extracted markdown)",
+                "category": "Python Hover"
+            },
+            {
+                "command": "pythonHover.toggleTypeAwareHovers",
+                "title": "Toggle Type-Aware Hovers",
                 "category": "Python Hover"
             }
         ],
         "configuration": {
             "title": "Python Hover",
             "properties": {
+                "pythonHover.docsLocale": {
+                    "type": "string",
+                    "default": "en",
+                    "description": "Docs locale (e.g., 'en', 'ja', 'fr'). Uses localized docs.python.org if available."
+                },
+                "pythonHover.openTarget": {
+                    "type": "string",
+                    "default": "auto",
+                    "enum": [
+                        "auto",
+                        "editor",
+                        "external"
+                    ],
+                    "description": "Where to open official docs links by default: 'editor' (Simple Browser), 'external' (system browser), or 'auto' (try editor then fallback)."
+                },
                 "pythonHover.pythonVersion": {
                     "type": "string",
                     "default": "3",
@@ -122,6 +187,11 @@
                     "default": true,
                     "description": "Include constants (None, True, False) in hover documentation"
                 },
+                "pythonHover.includeExceptions": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Include built-in exceptions (ValueError, TypeError, etc.) in hover documentation"
+                },
                 "pythonHover.includeDocExamples": {
                     "type": "boolean",
                     "default": true,
@@ -147,6 +217,11 @@
                     "default": true,
                     "description": "For class hovers, include a compact special methods section."
                 },
+                "pythonHover.includeDunderMethods": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Map __dunder__ names to the Special Method Names section in the data model."
+                },
                 "pythonHover.offlineOnly": {
                     "type": "boolean",
                     "default": false,
@@ -171,12 +246,117 @@
                     "default": true,
                     "description": "Enable context-aware hover detection"
                 },
+                "pythonHover.typeAwareHovers": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Resolve obj.attr/method to the concrete type's official docs when possible (best-effort)."
+                },
                 "pythonHover.showActionLinks": {
                     "type": "boolean",
                     "default": true,
                     "description": "Show helpful action links in hover (open docs, insert template, copy)."
+                },
+                "pythonHover.dynamicIndexing": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Auto-discover symbols and anchors from docs.python.org so the extension stays up to date."
+                },
+                "pythonHover.indexCacheDays": {
+                    "type": "number",
+                    "default": 7,
+                    "minimum": 1,
+                    "maximum": 60,
+                    "description": "Cache duration for auto-discovered docs index."
+                },
+                "pythonHover.autoRefreshIndexOnStartup": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "On startup, warm and refresh the dynamic docs index in the background."
+                },
+                "pythonHover.autoLinkPeps": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Automatically link PEP references (e.g., 'PEP 8' → peps.python.org)."
+                },
+                "pythonHover.fixStandardTypeHierarchyLink": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Ensure the phrase 'The standard type hierarchy' links to the correct section."
+                },
+                "pythonHover.repairTruncatedDocLinks": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Attempt to repair truncated docs.python.org links in extracted content."
+                },
+                "pythonHover.useDomParser": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Use a DOM-based parser to extract sections and rewrite links reliably (recommended)."
+                },
+                "pythonHover.indexIncludeGlossary": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Include glossary page in dynamic indexing."
+                },
+                "pythonHover.indexIncludePeps": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Include PEP site root in dynamic indexing (for PEP auto-discovery)."
+                },
+                "pythonHover.exportIncludeMetadata": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Include title and docs URL header when exporting hover to Markdown."
+                },
+                "pythonHover.showKeyPoints": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Show a short 'Key points' style summary derived from the first paragraph."
+                },
+                "pythonHover.showTinyExample": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Prefer including one tiny example (2–9 lines) in summaries."
+                },
+                "pythonHover.limitGrammarLines": {
+                    "type": "number",
+                    "default": 8,
+                    "minimum": 1,
+                    "maximum": 30,
+                    "description": "Maximum number of lines to show in grammar (production) fences."
+                },
+                "pythonHover.grammarMaxChars": {
+                    "type": "number",
+                    "default": 600,
+                    "minimum": 100,
+                    "maximum": 3000,
+                    "description": "Maximum characters to show in grammar (production) fences."
+                },
+                "pythonHover.showActions.insertTemplates": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Show quick actions to insert code templates (e.g., class, if)."
                 }
             }
+        },
+        "menus": {
+            "commandPalette": [
+                {
+                    "command": "pythonHover.rebuildDocsIndex",
+                    "when": "true",
+                    "group": "navigation@5"
+                },
+                {
+                    "command": "pythonHover.toggleDynamicIndexing",
+                    "when": "true",
+                    "group": "navigation@6"
+                },
+                {
+                    "command": "pythonHover.toggleTypeAwareHovers",
+                    "when": "true",
+                    "group": "navigation@7"
+                }
+            ]
         }
     },
     "scripts": {
@@ -190,6 +370,10 @@
         "@types/node": "^20.5.1",
         "@types/vscode": "^1.90.0",
         "@vscode/vsce": "^3.6.0",
+        "html-entities": "^2.6.0",
         "typescript": "^5.5.0"
+    },
+    "dependencies": {
+        "cheerio": "^1.0.0-rc.12"
     }
 }
