feat: Add GitHub Actions workflow for publishing VS Code extension; update .vscodeignore and package.json for bundled dependencies

--- a/package.json
+++ b/package.json
@@ -306,5 +306,9 @@
         "@types/node-fetch": "^2.6.13",
         "cheerio": "^1.0.0-rc.12",
         "node-fetch": "^2.7.0"
-    }
+    },
+    "bundledDependencies": [
+        "cheerio",
+        "node-fetch"
+    ]
 }
