--- a/package.json
+++ b/package.json
@@ -284,6 +284,25 @@
                     "type": "boolean",
                     "default": false,
                     "description": "Show quick actions to insert code templates (e.g., class, if)."
+                },
+                "pythonHover.telemetry": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Enable anonymous telemetry to help improve the extension. No personal data is collected."
+                },
+                "pythonHover.cache.maxSize": {
+                    "type": "number",
+                    "default": 100,
+                    "minimum": 10,
+                    "maximum": 500,
+                    "description": "Maximum number of items to keep in the in-memory cache."
+                },
+                "pythonHover.performance.debounceMs": {
+                    "type": "number",
+                    "default": 50,
+                    "minimum": 0,
+                    "maximum": 500,
+                    "description": "Debounce time in milliseconds for hover requests to improve performance."
                 }
             }
         },
@@ -294,12 +313,16 @@
         "watch": "tsc -w -p .",
         "vscode:prepublish": "npm run compile",
         "package": "vsce package",
-        "publish": "vsce publish"
+        "publish": "vsce publish",
+        "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
+        "@types/mocha": "^10.0.10",
         "@types/node": "^20.5.1",
         "@types/vscode": "^1.90.0",
         "@vscode/vsce": "^3.6.0",
+        "glob": "^11.0.3",
+        "mocha": "^11.7.1",
         "typescript": "^5.5.0"
     },
     "dependencies": {
@@ -308,6 +331,10 @@
         "node-fetch": "^2.7.0"
     },
     "bundledDependencies": [
+        "cheerio",
+        "node-fetch"
+    ],
+    "bundleDependencies": [
         "cheerio",
         "node-fetch"
     ]
