--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
     ],
     "exclude": [
         "node_modules",
-        ".vscode-test"
+        ".vscode-test",
+        "src/test/**/*.test.ts",
+        "scripts"
     ]
 }
