feat: Enhance hover functionality with comprehensive support for builtin functions and dunder methods
- Added support for 70+ builtin functions and 80+ dunder methods with context-aware documentation.
- Improved hover UI with enhanced formatting and prominent display options.
- Removed telemetry and inventory management code to streamline functionality.
- Updated tests and examples to reflect new features and ensure coverage.
- Introduced caching mechanisms for improved performance and reliability.
- Enhanced error handling and logging for better debugging experience.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -18,7 +18,30 @@ out/extension_backup.*
 out/extension_new.*
 out/extention.*
 
-python/**
-src/test/**
-IMPLEMENTATION_SUMMARY.md
-IMPROVEMENTS.md
+# Source files - use bundled version instead
+src/**
+out/test/**
+node_modules/**
+!node_modules/vscode-languageclient/**
+
+# Build and development files
+esbuild.js
+.gitignore
+.npmignore
+tsconfig.json
+webpack.config.js
+*.ts
+!*.d.ts
+
+# Documentation not needed in extension
+*.md
+!readme.md
+!LICENSE.md
+!CHANGELOG.md
+!RELEASE_NOTES.md
+!ENHANCED_FEATURES.md
+
+# Test files
+test/**
+**/*.test.*
+**/*.spec.*
