--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "python-hover",
-    "icon": "images/icon.png",
+    "icon": "media/icon.png",
     "displayName": "🐍 Python Hover - Enhanced Documentation",
     "description": "Instant Python documentation with 300+ constructs, smart context detection, and practical examples. Perfect for learning and quick reference.",
-    "version": "2.4.3",
+    "version": "2.4.4",
     "publisher": "KiidxAtlas",
     "license": "MIT",
     "repository": {
